--- a/html/collegesavingscalc.html
+++ b/html/collegesavingscalc.html
@@ -134,8 +134,8 @@
             flex: 1;
             min-width: 280px;
             max-width: 350px;
-            height: 300px; /* Fixed height for the chart container */
-            position: relative; /* Needed for Chart.js responsiveness */
+            height: auto; /* IMPORTANT: Remove fixed height */
+            position: relative;
             border: 1px solid #ddd;
             border-radius: 8px;
             padding: 10px;
@@ -155,7 +155,8 @@
 
         .chart-container canvas {
             max-width: 100%;
-            height: 250px; /* Adjust canvas height to fit container */
+            height: auto; /* IMPORTANT: Remove fixed height */
+            /* Remove any fixed height or !important here */
         }
 
         .back-link {
