--- a/html/amortizationcalc.html
+++ b/html/amortizationcalc.html
@@ -195,7 +195,7 @@
             padding: 15px;
             background-color: #f8f8f8;
             box-sizing: border-box;
-            display: none; /* Hidden by default */
+            /* Removed 'display: none;' here, JS will control visibility if needed */
         }
 
         #amortizationScheduleContainer h2 {
@@ -374,6 +374,6 @@
         &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
 
-    <script src="amortizationcalc-script.js"></script>
+    <script src="../scripts/amortizationcalc-script.js"></script>
 </body>
 </html>
